--- a/_pgbackup/index_1447849513.html
+++ b/_pgbackup/index_1447849513.html
@@ -194,13 +194,13 @@
                     <div class="editContent"> 
                         <h2><strong>ACLS - Soporte Vital Avanzado. Curso Subvencionado por el Colegio</strong></h2> 
                     </div>                     
-                    <div class="editContent" ""> 
+                    <div class="editContent"=""> 
                         <p>Este curso está <strong>acreditado oficialmente</strong> por la <strong>CFC</strong> con <strong>6,3 créditos</strong>, y comprende las maniobras de Soporte Vital Básico y Avanzado. Solicita el curso al Colegio para poder acceder de forma GRATUITA</p> 
                     </div>                     
                     <script type="text/javascript">var submitted=false;</script>
                     <iframe name="hidden_iframe" id="hidden_iframe" style="display: none;" onload="if(submitted) {window.location='http://medicarama.com/pages/gracias-antibioterapia';}"></iframe>                     
-                    <form id="mc-embedded-subscribe-form" action="https://docs.google.com/forms/d/1WOrrcHGN7bNoTSqgf1urhjb9nslmneRD2_GtpocEJNQ/formResponse" target="hidden_iframe" onsubmit="submitted=true;" name="mc-embedded-subscribe-form" novalidate="" class="signup-form" ""> 
-                        <div class="row" ""> 
+                    <form id="mc-embedded-subscribe-form" action="https://docs.google.com/forms/d/1WOrrcHGN7bNoTSqgf1urhjb9nslmneRD2_GtpocEJNQ/formResponse" target="hidden_iframe" onsubmit="submitted=true;" name="mc-embedded-subscribe-form" novalidate="" class="signup-form"=""> 
+                        <div class="row"=""> 
                             <div class="col-md-6"> 
                                 <input type="hidden" name="entry.1396260310" value="Enfer_Cuenca" class="ss-q-short" id="entry_1396260310" dir="auto" aria-label="Colegio" title="">                                 
                                 <div class="form-group"> 
@@ -209,23 +209,22 @@
                             </div>                             
                             <div class="col-md-6"> 
                                 <div class="form-group"> 
-                                    <input type="text" class="form-control" name="entry.2051979902" value="" id="entry_2051979902" dir="auto" aria-label="Número de Colegiad@" placeholder="Nº de Colegiad@" title="">                                     
+                                    <input type="text" class="form-control" ame="entry.2051979902" value="" id="entry_2051979902" dir="auto" aria-label="Número de Colegiad@" placeholder="Nº de Colegiad@" title="">                                     
                                 </div>                                 
                             </div>                             
                         </div>                         
                         <div class="form-group"> 
-                            <input type="email" placeholder="Email" class="form-control" name="entry.975065076" value="" id="entry_975065076" dir="auto" aria-label="Email  Email erróneo" title="Email erróneo">                             
+                            <input type="email" placeholder="Email" class="form-control" ame="entry.975065076" value="" id="entry_975065076" dir="auto" aria-label="Email  Email erróneo" title="Email erróneo">                             
                         </div>                         
                         <div> 
                             <button class="btn btn-primary btn-block" type="submit" name="submit" value="Solicitar el Curso" id="ss-submit">Solicitar el Curso</button>                             
-                        </div>
-                        <div class="editContent">
-                            <label>
-                                <input type="checkbox" class="control-label"  name="entry.772933663" value="Acepto" id="group_772933663_1" role="checkbox" dir="auto">                                                                            * Acepto la 
-                                <a href="http://medicarama.com/pages/privacy" target="blank">Política de Privacidad</a> de Medicarama.com y autorizo a que mis datos sean cedidos al Colegio de Enfermería de Cuenca para la gestión de la inscripción a este curso.
-                            </label>
                         </div>                         
                     </form>
+                    <div>
+                        <div class="editContent"="">
+                            <p>* Al enviar este formulario acepto la <a href="http://medicarama.com/pages/privacy" target="blank">Política de Privacidad</a> de Medicarama.com y autorizo a que mis datos sean cedidos al Colegio de Enfermería de Cuenca para la gestión de la inscripción a este curso.</p>
+                        </div>
+                    </div>
                 </div>
                 <!-- /.col -->                 
             </div>
