--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                         </div>
                         <div class="editContent">
                             <label>
-                                <input type="checkbox" class="control-label"  name="entry.772933663" value="Acepto" id="group_772933663_1" role="checkbox" dir="auto">                                                                            * Acepto la 
+                                <input type="checkbox" class="control-label"  name="entry.772933663" value="Acepto" id="group_772933663_1" role="checkbox" dir="auto">Acepto la 
                                 <a href="http://medicarama.com/pages/privacy" target="blank">Política de Privacidad</a> de Medicarama.com y autorizo a que mis datos sean cedidos al Colegio de Enfermería de Cuenca para la gestión de la inscripción a este curso.
                             </label>
                         </div>                         
@@ -248,29 +248,71 @@
             <div class="row"> 
                 <div class="grid col-md-4 col-sm-6 col-xs-12"> 
                     <figure class="effect-lily"> 
+                        <img src="images/thumbnails/th-rcp.jpg" alt="Curso BLS">                         
+                        <figcaption> 
+                            <div class="editContent"> 
+                                <h2><strong>Gratuito</strong></h2> 
+                            </div>                             
+                            <div class="editContent"> 
+                                <p><strong>BLS - Soporte Vital Básico</strong></p> 
+                            </div>                             
+                            <a href="http://medicarama.com/courses/svb" target="_blank"></a> 
+                        </figcaption>                         
+                    </figure>                     
+                </div>                 <div class="grid col-md-4 col-sm-6 col-xs-12"> 
+                    <figure class="effect-lily"> 
                         <img src="images/thumbnails/th-uobs.jpg" alt="Curso Urgencias Obstétricas">                         
                         <figcaption> 
                             <div class="editContent"> 
-                                <h2><strike>49€</strike><strong>39€</strong></h2> 
+                                <h2><strike>$49</strike><strong>$39</strong></h2> 
                             </div>                             
                             <div class="editContent"> 
                                 <p><strong>Urgencias Obstétricas Extrahospitalarias</strong></p> 
                             </div>                             
-                            <a href="http://medicarama.com/courses/urgencias-obstetricas/"></a> 
+                            <a href="http://medicarama.com/courses/urgencias-obstetricas?coupon_code=ENFERCUENCA" target="_blank"></a> 
                         </figcaption>                         
                     </figure>                     
                 </div>                 
                 <div class="grid col-md-4 col-sm-6 col-xs-12"> 
                     <figure class="effect-lily"> 
-                        <img src="images/thumbnails/th-antibio.jpg" alt="Curso Urgencias Obstétricas">                         
+                        <img src="images/thumbnails/th-antibio.jpg" alt="Curso Antibioterapia" target="_blank">                         
                         <figcaption> 
                             <div class="editContent"> 
-                                <h2><strike>49€</strike><strong>39€</strong></h2> 
+                                <h2><strike>$49</strike><strong>$39</strong></h2> 
                             </div>                             
                             <div class="editContent"> 
                                 <p><strong>Antibioterapia Básica</strong></p> 
                             </div>                             
-                            <a href="http://medicarama.com/courses/antibioterapia/"></a> 
+                            <a href="http://medicarama.com/courses/antibioterapia?coupon_code=ENFERCUENCA" target="_blank"></a> 
+                        </figcaption>                         
+                    </figure>                     
+                </div>                 
+     
+                <div class="grid col-md-4 col-sm-6 col-xs-12"> 
+                    <figure class="effect-lily"> 
+                        <img src="images/thumbnails/th-nefro.jpg" alt="Curso Urgencias Obstétricas">                         
+                        <figcaption> 
+                            <div class="editContent"> 
+                                <h2><strike>299€</strike><strong>239€</strong></h2> 
+                            </div>                             
+                            <div class="editContent"> 
+                                <p><strong>Curso Completo de Diálisis Peritoneal</strong></p> 
+                            </div>                             
+                            <a href="http://medicarama.com/courses/dialisis-peritoneal?coupon_code=ENFERCUENCA" target="_blank"></a> 
+                        </figcaption>                         
+                    </figure>                     
+                </div>                 
+                <div class="grid col-md-4 col-sm-6 col-xs-12"> 
+                    <figure class="effect-lily"> 
+                        <img src="images/thumbnails/th-radio.jpg" alt="Curso Urgencias Obstétricas">                         
+                        <figcaption> 
+                            <div class="editContent"> 
+                                <h2><strike>$49</strike><strong>$39</strong></h2> 
+                            </div>                             
+                            <div class="editContent"> 
+                                <p><strong>Radiología Básica</strong></p> 
+                            </div>                             
+                            <a href="http://medicarama.com/courses/radiologia-basica?coupon_code=ENFERCUENCA" target="_blank"></a> 
                         </figcaption>                         
                     </figure>                     
                 </div>                 
@@ -284,49 +326,7 @@
                             <div class="editContent"> 
                                 <p><strong>Introducción al PowerPoint</strong></p> 
                             </div>                             
-                            <a href="http://medicarama.com/courses/powerpoint/"></a> 
-                        </figcaption>                         
-                    </figure>                     
-                </div>                 
-                <div class="grid col-md-4 col-sm-6 col-xs-12"> 
-                    <figure class="effect-lily"> 
-                        <img src="images/thumbnails/th-nefro.jpg" alt="Curso Urgencias Obstétricas">                         
-                        <figcaption> 
-                            <div class="editContent"> 
-                                <h2><strike>299€</strike><strong>239€</strong></h2> 
-                            </div>                             
-                            <div class="editContent"> 
-                                <p><strong>Curso Completo de Diálisis Peritoneal</strong></p> 
-                            </div>                             
-                            <a href="http://medicarama.com/courses/dialisis-peritoneal/"></a> 
-                        </figcaption>                         
-                    </figure>                     
-                </div>                 
-                <div class="grid col-md-4 col-sm-6 col-xs-12"> 
-                    <figure class="effect-lily"> 
-                        <img src="images/thumbnails/th-radio.jpg" alt="Curso Urgencias Obstétricas">                         
-                        <figcaption> 
-                            <div class="editContent"> 
-                                <h2><strike>49€</strike><strong>39€</strong></h2> 
-                            </div>                             
-                            <div class="editContent"> 
-                                <p><strong>Radiología Básica</strong></p> 
-                            </div>                             
-                            <a href="http://medicarama.com/courses/radiologia-basica/"></a> 
-                        </figcaption>                         
-                    </figure>                     
-                </div>                 
-                <div class="grid col-md-4 col-sm-6 col-xs-12"> 
-                    <figure class="effect-lily"> 
-                        <img src="images/thumbnails/th-sis.jpg" alt="Curso Urgencias Obstétricas">                         
-                        <figcaption> 
-                            <div class="editContent"> 
-                                <h2><strong>Gratuito</strong></h2> 
-                            </div>                             
-                            <div class="editContent"> 
-                                <p><strong>Sistemas de Gestión de Imagen Médica</strong></p> 
-                            </div>                             
-                            <a href="http://medicarama.com/courses/imagen-medica/"></a> 
+                            <a href="http://medicarama.com/courses/powerpoint/" target="_blank"></a> 
                         </figcaption>                         
                     </figure>                     
                 </div>                 
