--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                         <p>Este curso está <strong>acreditado oficialmente</strong> por la <strong>CFC</strong> con <strong>6,3 créditos</strong>, y comprende las maniobras de Soporte Vital Básico y Avanzado. Solicita el curso al Colegio para poder acceder de forma GRATUITA</p> 
                     </div>                     
                     <script type="text/javascript">var submitted=false;</script>
-                    <iframe name="hidden_iframe" id="hidden_iframe" style="display: none;" onload="if(submitted) {window.location='http://medicarama.com/pages/gracias-antibioterapia';}"></iframe>                     
+                    <iframe name="hidden_iframe" id="hidden_iframe" style="display: none;" onload="if(submitted) {window.location='http://enfermeriacuenca.medicarama.com/thankyou.html';}"></iframe>                     
                     <form id="mc-embedded-subscribe-form" action="https://docs.google.com/forms/d/1WOrrcHGN7bNoTSqgf1urhjb9nslmneRD2_GtpocEJNQ/formResponse" target="hidden_iframe" onsubmit="submitted=true;" name="mc-embedded-subscribe-form" novalidate="" class="signup-form" ""> 
                         <div class="row" ""> 
                             <div class="col-md-6"> 
