--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                         <h2><strong>ACLS - Soporte Vital Avanzado. Curso Subvencionado por el Colegio</strong></h2> 
                     </div>                     
                     <div class="editContent" ""> 
-                        <p>Este curso está <strong>acreditado oficialmente</strong> por la <strong>CFC</strong> con <strong>6,3 créditos</strong>, y comprende las maniobras de Soporte Vital Básico y Avanzado. Solicita el curso al Colegio para poder acceder de forma GRATUITA</p> 
+                        <p>Este curso está <strong>acreditado oficialmente</strong> por la <strong>CFC</strong> con <strong>6,3 créditos</strong>, y comprende las maniobras de Soporte Vital Básico y Avanzado. Solicita el curso al Colegio para poder acceder de forma GRATUITA (se requiere ser colegiado/a)</p> 
                     </div>                     
                     <script type="text/javascript">var submitted=false;</script>
                     <iframe name="hidden_iframe" id="hidden_iframe" style="display: none;" onload="if(submitted) {window.location='http://enfermeriacuenca.medicarama.com/thankyou.html';}"></iframe>                     
