--- a/index.html
+++ b/index.html
@@ -163,6 +163,15 @@
                             <p class="faq-text faq4 collapse in role-element leadstyle-text"><br>Este curso va dirigido a profesionales sanitarios en general: M&#233;dicos, Enfermeros, T&#233;cnicos y Auxiliares. Las maniobras de Soporte Vital B&#225;sico se pueden realizar por cualquier persona, por lo que esta parte del curso es &#250;til para cualquiera. Sin embargo, las maniobras de Soporte Vital Avanzado requieren de material y de un entorno medicalizado para su realizaci&#243;n.</p>
                         </div>
                     </div>
+                    <div class="faq role-element leadstyle-container">
+                        <div class="faq-toggle" role="button" data-toggle="collapse" data-target=".faq5" aria-expanded="false" aria-controls="faq5">
+<span class="plus">+</span><span class="minus">-</span>
+</div>
+                        <div class="fill">
+                            <h3 class="role-element leadstyle-text"><strong>&#191;EL CURSO ES GRATUITO O ES EL COLEGIO QUIEN LO PAGA?</strong></h3>
+                            <p class="faq-text faq5 collapse in role-element leadstyle-text"><br>Es el Colegio el que paga las inscripciones para los colegiados, por lo que te pedimos que si&#160;piensas hacer el curso a lo largo de este a&#241;o, no dudes en solicitarlo, pero no lo pidas si no lo vas a hacer, porque al colegio le cuesta dinero.</p>
+                        </div>
+                    </div>
                     </div>
             </div>
         </div>
