--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!--  This beautiful and lightning fast landing page was proudly created with LeadPages ( see: https://www.LeadPages.net ) and hosted on the LeadPages lead generation platform. -->
 <html lang="en">
 <head>
-    <base href="//medicarama.leadpages.co"><meta charset="utf-8"><link rel="stylesheet" type="text/css" href="/static/lp948/public/css/leadpage.css"><script>window.LeadPageData = {"facebookShareURL": {"variable": "facebookShareURL", "dafault": "", "name": "The URL to share on Facebook. Leave blank to share the current page.", "value": "http://enfermeriacuenca.medicarama.com/"}, "twitterShareURL": {"variable": "twitterShareURL", "dafault": "", "name": "The URL to share on Twitter. Leave blank to share the current page.", "value": "http://enfermeriacuenca.medicarama.com/"}, "googleShareURL": {"variable": "googleShareURL", "dafault": "", "name": "The URL to share on Google+. Leave blank to share the current page.", "value": "http://enfermeriacuenca.medicarama.com/"}, "linkedInShareURL": {"variable": "linkedInShareURL", "dafault": "", "name": "The URL to share on LinkedIn. Leave blank to share the current page.", "value": "http://enfermeriacuenca.medicarama.com/"}};</script><script type="text/javascript" src="/static/lp948/public/js/leadpage.js"></script>
+    <base href="//medicarama.leadpages.co"><meta charset="utf-8"><link rel="stylesheet" type="text/css" href="/static/lp952/public/css/leadpage.css"><script>window.LeadPageData = {"facebookShareURL": {"variable": "facebookShareURL", "dafault": "", "name": "The URL to share on Facebook. Leave blank to share the current page.", "value": "http://enfermeriacuenca.medicarama.com/"}, "twitterShareURL": {"variable": "twitterShareURL", "dafault": "", "name": "The URL to share on Twitter. Leave blank to share the current page.", "value": "http://enfermeriacuenca.medicarama.com/"}, "googleShareURL": {"variable": "googleShareURL", "dafault": "", "name": "The URL to share on Google+. Leave blank to share the current page.", "value": "http://enfermeriacuenca.medicarama.com/"}, "linkedInShareURL": {"variable": "linkedInShareURL", "dafault": "", "name": "The URL to share on LinkedIn. Leave blank to share the current page.", "value": "http://enfermeriacuenca.medicarama.com/"}};</script><script type="text/javascript" src="/static/lp952/public/js/leadpage.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,400italic,500,500italic,700,700italic%7CPT+Serif:400,400italic,700,700italic" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="/f/p6OTy%252BD5fosXa7ea/2dLBAA6kVwDr4UFbHfdguXm0Jq8RScW0kvOcF2MRYoKJfvPWbJuwAWzNhlm7WZfeLHx7aDvScYXnGXk%7Ccss/font-awesome.min.css">
@@ -21,7 +21,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12 text-center">
-                <a class="role-element leadstyle-image-link" href="#/"><img class="logo" src="https://lh3.googleusercontent.com/0whaoa1CsI5hJnqZeZT8J6UTjbVuRXnGpzDAoYyZKT2l-cQamjE3z8iXS8L7ivYqZXnHcMk9KyDwLwvGkru_=s0" style="max-width: 410px;"></a>
+                <a class="role-element leadstyle-image-link" href="#/"><img class="logo" src="https://lh3.googleusercontent.com/PEn2ALrCiRYAm_WH6ZXzmwVacn6jbAwIov5mnuirW0TVIplIatHAN9dsXLKoF5xGfwTiHok7omBqz6Fw3V7z=s0" style="max-width: 410px;"></a>
             </div>
         </div>
     </div>
@@ -29,7 +29,7 @@
 
 <div class="alignment">
     <div class="container-fluid">
-        <div id="social" class="social role-element leadstyle-container affix">
+        <div id="social" class="social affix-top role-element leadstyle-container">
             <a class="share twitter role-element leadstyle-dynamic" data-service="twitter"><i class="fa fa-twitter"></i></a>
             <a class="share facebook role-element leadstyle-dynamic" data-service="facebook"><i class="fa fa-facebook"></i></a>
             <a class="share google role-element leadstyle-dynamic" data-service="google"><i class="fa fa-google-plus"></i></a>
@@ -133,7 +133,7 @@
 </div>
                         <div class="fill">
                             <h3 class="role-element leadstyle-text"><strong>&#191;D&#211;NDE SE HACE ESTE CURSO? &#191;CU&#193;NDO EMPIEZA? &#191;CU&#193;NDO TERMINA?</strong></h3>
-                            <p class="faq-text faq1 role-element leadstyle-text collapse in"><br>Este curso es completamente online, y ya est&#225; abierto, puedes empezar ahora mismo. No tiene fecha de finalizaci&#243;n, por lo que podr&#225;s entrar al curso cuando quieras y realizarlo a tu propio ritmo.</p>
+                            <p class="faq-text faq1 collapse in role-element leadstyle-text"><br>Este curso es completamente online, y ya est&#225; abierto, puedes empezar ahora mismo. No tiene fecha de finalizaci&#243;n, por lo que podr&#225;s entrar al curso cuando quieras y realizarlo a tu propio ritmo.</p>
                         </div>
                     </div>
                     <div class="faq role-element leadstyle-container">
@@ -159,7 +159,7 @@
 <span class="plus">+</span><span class="minus">-</span>
 </div>
                         <div class="fill">
-                            <h3 class="role-element leadstyle-text"><strong>&#191;ESTE CURSO VA DIRIGIDO S&#211;LO A M&#201;DICOS?</strong><br></h3>
+                            <h3 class="role-element leadstyle-text"><strong>&#191;ESTE CURSO VA DIRIGIDO S&#211;LO A M&#201;DICOS?</strong></h3>
                             <p class="faq-text faq4 collapse in role-element leadstyle-text"><br>Este curso va dirigido a profesionales sanitarios en general: M&#233;dicos, Enfermeros, T&#233;cnicos y Auxiliares. Las maniobras de Soporte Vital B&#225;sico se pueden realizar por cualquier persona, por lo que esta parte del curso es &#250;til para cualquiera. Sin embargo, las maniobras de Soporte Vital Avanzado requieren de material y de un entorno medicalizado para su realizaci&#243;n.</p>
                         </div>
                     </div>
@@ -211,5 +211,5 @@
     </div>
 </footer>
 
-<script src="//my.leadpages.net/static/lp948/min/tracking.js"></script></body>
+<script src="//my.leadpages.net/static/lp952/min/tracking.js"></script></body>
 </html><!--  This beautiful and lightning fast landing page was proudly created with LeadPages ( see: https://www.LeadPages.net ) and hosted on the LeadPages lead generation platform. -->
